--- a/SQL_23_11_23.md
+++ b/SQL_23_11_23.md
@@ -2,7 +2,7 @@
 
 + SQL(Syructured Query Language) 이란?<br>
 
-    &nbsp;<u>데이터베이스에 요청(Query)</u>을 날려<br> 원하는 데이터를 가져오는 것을 도와주는 언어
+    &nbsp;&nbsp;<u>데이터베이스에 요청(Query)</u>을 날려<br> 원하는 데이터를 가져오는 것을 도와주는 언어
 
 + SQL의 역할<br>
 ``````
@@ -16,11 +16,11 @@
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SQL은 2번. <u>Read의 편의성</u>을 높여준다. 이것이 SQL을 사용하는 이유이다.<br><br>
 
 + 에러 발생<br>
-&nbsp;이후 강의 내용대로 DBeaver 설치 후 강의에서 제공되는 DB host로 접근하려 했으나 한 가지 문제가 발생하였다.
+&nbsp;&nbsp;이후 강의 내용대로 DBeaver 설치 후 강의에서 제공되는 DB host로 접근하려 했으나 한 가지 문제가 발생하였다.
 `````
 "Public Key Retrieval is not allowed"
 `````
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;알아보니 MySQL의 8.x 버전 이후부터 발생하는 문제라고 한다.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;알아보니 MySQL의 8.x 버전 이후부터 발생하는 문제라고 한다.<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;해당 에러내용을 구글링 하는 것으로 비교적 간단히 해결하였다.<br>
 ``````
 1. 연결하고자 하는 connection에서 Edit Connection 탭에 들어간다.
