--- a/SQL_23_11_23.md
+++ b/SQL_23_11_23.md
@@ -37,8 +37,8 @@
 특정데이터 가져오기 : where
     where과 같이 자주쓰이는 문법
         1. != : 같지 않음
-        2. between (데이터) and (데이터) : 범위
-        3. in(a,b, ) : 해당 데이터(a,b, ) 포함
+        2. between (A데이터) and (B데이터) : 범위 (A <= X < B) (B를 포함하지 않는다.)
+        3. in(a,b,...) : 해당 데이터(a,b,...) 포함
         4. like ' % ' : 패턴조건 
         
 유용한 문법 :
@@ -68,7 +68,7 @@ sum(필드명) : 합계
 order by (필드명) asc : 오름차순 정렬(asc 생략가능)
 order by (필드명) dsc : 내림차순 정렬
 
-별칭 : 어떤 테이블의 데이터를 가져올 것인지 구분하기위함
+별칭(Alias) : 어떤 테이블의 데이터를 가져올 것인지 구분하기위함
     (테이블명) 별칭
     (필드명) as 별칭
 ```
