--- a/SQL_23_11_23.md
+++ b/SQL_23_11_23.md
@@ -66,7 +66,7 @@ avg(필드명) : 평균
 sum(필드명) : 합계
 
 order by (필드명) asc : 오름차순 정렬(asc 생략가능)
-order by (필드명) dsc : 내림차순 정렬
+order by (필드명) desc : 내림차순 정렬
 
 별칭(Alias) : 어떤 테이블의 데이터를 가져올 것인지 구분하기위함
     (테이블명) 별칭
