--- a/Java_23_12_03.md
+++ b/Java_23_12_03.md
@@ -52,7 +52,7 @@ public class IteratorTest {
 
 
         Iterator<Integer> itr = list.iterator();
-        while(iterator.hasNext()) { //순차적으로 조회(총 반복횟수가 101번)
+        while(itr.hasNext()) { //순차적으로 조회(총 반복횟수가 101번)
             int num = itr.next();   
             System.out.print(num);
         }
